--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 * Return directory listing of saved queries by ordering in JQL
   * Support orderBy as control for each listing
 * Support startAt,total pagination control
+* ?Use https://docs.atlassian.com/software/jira/docs/api/REST/7.6.1/jira-rest-plugin.wadl in some way?
